--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
+  "scripts": {
+    "clean": "rimraf dist/*",
+    "build": "webpack --progress",
+    "serve": "nodemon dist/index.js"
+  },
   "dependencies": {
-    "deno_ls_plugin": "^0.1.0",
-    "typescript": "^4.3.2"
+    "@types/express": "^4.17.12",
+    "@types/uuid": "^8.3.0",
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^15.6.1",
+    "nodemon": "^2.0.7",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^9.2.2",
+    "typescript": "^4.3.2",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
