--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "serve": "nodemon dist/index.js"
   },
   "dependencies": {
+    "@types/colors": "^1.2.1",
     "@types/express": "^4.17.12",
     "@types/uuid": "^8.3.0",
+    "colors": "^1.4.0",
     "express": "^4.17.1",
     "uuid": "^8.3.2"
   },
