--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "@types/colors": "^1.2.1",
     "@types/express": "^4.17.12",
+    "@types/mongoose": "^5.10.5",
     "@types/uuid": "^8.3.0",
     "colors": "^1.4.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.12",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
